Prevent top menus from line breaking on small screens

--- a/babybuddy/static_src/scss/global.scss
+++ b/babybuddy/static_src/scss/global.scss
@@ -48,7 +48,7 @@
     }
 }
 
-// Icon size increase.
+// Larger icon variant.
 .icon-2x {
-    font-size: 2em;
+    font-size: 1.65em;
 }
